# wikidata-realtime-dumps

./: .cirrus.yml  .gitignore  Cargo.toml  README.md  count_entities_per_chunk.sh  log4rs.yaml
continuous_download/: Cargo.toml
continuous_download/src/: lib.rs
sorted_stream/: .gitignore  Cargo.toml
sorted_stream/src/: lib.rs
src/: bzip2_par.rs  events.rs  get_entity.rs  http_client.rs  init.rs  main.rs  prelude.rs  server.rs  warp_server.rs
src/actor/: arbiter_pool.rs  archivarius.rs  archive.rs  chunk.rs  chunk_storage.rs  mod.rs
src/actor/archivarius/: mod.rs  tracker.rs
src/actor/archivarius/volume/: mod.rs
src/actor/chunk/: chunk_storage.rs  mod.rs
src/actor/volume/: chunk_storage.rs  mod.rs  storage.rs
src/archive/: arbiter_pool.rs  mod.rs  test.rs
src/archive/archivarius/: mod.rs  tracker.rs
src/archive/archivarius/volume/: mod.rs  storage.rs
src/events/: continuous_stream.rs  event_stream.rs  mod.rs
src/init/: dumps.rs  mod.rs
src/stream_ext/: continuous_download.rs  join_streams.rs  mod.rs  sorted.rs
