[package]
name = "wikidata-realtime-dumps"
version = "0.1.0"
authors = ["Aleksey Bekh-Ivanov <6ex@mail.ru>"]
edition = "2018"

[workspace]
members = ["continuous_download", "sorted_stream"]

[profile.dev]
panic = 'abort'
[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix="0.9.0"
actix-rt = "1.0.0"
futures = { version="0.3.1", features=["compat"] }
bytes = "0.5.3"
sse-codec = {version="0.1.0", git="https://github.com/bekh6ex/sse-codec.git", branch="fix-stream-bug"}
serde = {version="1.0.104", features=["serde_derive"]}
serde_json = "1.0.44"
log = "0.4.8"
async-std = "1.4.0"
flate2 = "1.0.13"
pin-utils = "0.1.0-alpha.4"
futures-util = "0.3.1"
futures-backoff = { git="https://github.com/bcmcmill/rust-futures-backoff.git", branch="async_await" }
backoff = "0.1.5"
measure_time = "0.6"
hyper = "0.13"
hyper-rustls = "0.20"
log4rs = "0.9.0"
warp = "0.2.0"
rand = "0.7.3"
async-compression = { version="0.2.0", features=["bzip2", "stream", "gzip"]}
futures_codec = "0.3.4"
futures-timer = "2.0.2"
num_cpus = "1.12.0"
continuous_download = { path="continuous_download"}
sorted_stream = { path="sorted_stream"}
stream_throttle = { version="0.3.1" , default-features = false, features=['timer-futures-timer']}

[dev-dependencies]
futures-test = "0.3.1"
proptest = "0.9.5"
proptest-attr-macro = "0.1.0"

[dev-dependencies.async-std]
version = "1.4.0"
features = ["attributes"]
