[package]
name = "sorted_stream"
version = "0.1.0"
authors = ["Aleksei Bekh-Ivanov <bekh6ex@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
futures = "0.3.1"
pin-utils = "0.1.0-alpha.4"

[dev-dependencies]
#async-std = {version="1.1.1", features=["attributes"]}
futures-test = "0.3.1"
